- Refactoring existing code to fit new connections concept
