# src/Harald.WebApi/Domain/ICapabilityRepository.cs
@@ -10,7 +10,5 @@ namespace Harald.WebApi.Domain
         Task<Capability> Get(Guid id);
         Task Add(Capability capability);
         Task Update(Capability capability);
-
-        Task<IEnumerable<Capability>> GetAll();
     }
 }
