# src/Harald.WebApi/Models/LeaveChannelInput.cs
@@ -1,15 +1,0 @@
-﻿using System;
-using System.ComponentModel.DataAnnotations;
-
-namespace Harald.WebApi.Models
-{
-    public class LeaveChannelInput
-    {
-        [Required]
-
-        public Guid CapabilityId { get; set; }
-
-        [Required]
-        public string ChannelId { get; set; }
-    }
-}
